Platform independed C++11 compiler option

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,5 +7,4 @@ file(GLOB_RECURSE fuji_cam_wifi_lib_public_headers ${CMAKE_CURRENT_SOURCE_DIR} i
 
 add_library(fuji_cam_wifi ${fuji_cam_wifi_lib_sources} ${fuji_cam_wifi_lib_private_headers} ${fuji_cam_wifi_lib_public_headers})
 target_include_directories(fuji_cam_wifi PUBLIC include PRIVATE src)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set_property(TARGET fuji_cam_wifi PROPERTY CXX_STANDARD 11)
