--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tool/linenoise-ng"]
 	path = tool/linenoise-ng
-	url = https:://github.com/hkr/linenoise-ng
+	url = https://github.com/hkr/linenoise-ng
