Add stream_cv command
This command pushes the images received from the
camera to an OpenCV window.

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -12,8 +12,11 @@ add_executable(fuji_cam_wifi_tool ${fuji_cam_wifi_tool_sources} ${fuji_cam_wifi_
 target_link_libraries(fuji_cam_wifi_tool fuji_cam_wifi linenoise)
 set_property(TARGET fuji_cam_wifi_tool PROPERTY CXX_STANDARD 11)
 
-find_package(Threads)
+find_package(Threads REQUIRED)
 target_link_libraries(fuji_cam_wifi_tool ${CMAKE_THREAD_LIBS_INIT})
+
+find_package(OpenCV REQUIRED)
+target_link_libraries(fuji_cam_wifi_tool ${OpenCV_LIBS})
 
 if(WIN32)
   target_link_libraries(fuji_cam_wifi_tool wsock32 ws2_32)
