Make OpenCV a build-time option

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -15,8 +15,17 @@ set_property(TARGET fuji_cam_wifi_tool PROPERTY CXX_STANDARD 11)
 find_package(Threads REQUIRED)
 target_link_libraries(fuji_cam_wifi_tool ${CMAKE_THREAD_LIBS_INIT})
 
-find_package(OpenCV REQUIRED)
-target_link_libraries(fuji_cam_wifi_tool ${OpenCV_LIBS})
+
+option(WITH_OPENCV "Build with OpenCV" OFF)
+
+if(WITH_OPENCV)
+    find_package(OpenCV)
+    target_link_libraries(fuji_cam_wifi_tool ${OpenCV_LIBS})
+
+    IF(OpenCV_FOUND)
+        ADD_DEFINITIONS(-DWITH_OPENCV)
+    ENDIF()
+endif()
 
 if(WIN32)
   target_link_libraries(fuji_cam_wifi_tool wsock32 ws2_32)
